# student-researches

./: CMakeLists.txt  README.md  db.sql  departments.cpp  departments.h  departments.ui  departments_insert.cpp  departments_insert.h  departments_insert.ui  departments_update.cpp  departments_update.h  departments_update.ui  funding.cpp  funding.h  funding.ui  funding_insert.cpp  funding_insert.h  funding_insert.ui  funding_update.cpp  funding_update.h  funding_update.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  printdialog.cpp  printdialog.h  printdialog.ui  printgraph.cpp  printgraph.h  printgraph.ui  reports.cpp  reports.h  reports.ui  (+39 more)
